...
                            </userDefinedRuntimeAttribute>
                            <userDefinedRuntimeAttribute type="color" keyPath="endColor">
                                <color key="value" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </view>
                    <navigationItem key="navigationItem" title="Store" id="TTg-lm-JJA">
                        <rightBarButtonItems>
                            <barButtonItem title="0.00 USD" id="qWR-yJ-bOL">
                                <connections>
                                    <action selector="checkOutPressed:" destination="Qas-qz-0sy" id="Brc-qs-Mo6"/>
                                </connections>
                            </barButtonItem>
...
